--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1127,7 +1127,7 @@
         padding-top: 80px;
     }
     .ptb-40 {
-        padding: 30px 0;
+        padding: 16px 0;
     }
     .pt-85 {
         padding-top: 60px;
@@ -1165,7 +1165,7 @@
         width: 100%;
     }
     .language-area {
-        text-align: center;
+        text-align: start;
     }
     .language-area ul > li {
         padding: 9px 0 3px;
