--- a/style.css
+++ b/style.css
@@ -1088,7 +1088,7 @@ body {
     top: 0;
     transition: .5s;
     width: 100%;
-    z-index: 99999999;
+    z-index: 99;
 }
 
 /*----------------------------------------*/
@@ -7633,6 +7633,34 @@ p.lost-password a:hover {
     color: #c29958;
 }
 
+.centered-button {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    /* background-color: #007bff; */
+    color: #000;
+    border: unset;
+    padding: 5px 10px;
+    cursor: pointer;
+    z-index: 999;
+}
+
+.user-name{
+    font-size: 12px;
+    color: #000;
+    font-weight: bold;
+}
+
+.user-message{
+    font-size: 12px;
+    color: #000;
+}
+
+.date-time{
+    font-size: 10px;
+    color: #cccccc;
+}
 
 @media only screen and (max-width: 992px) {
     .product-addto-links a {
