--- a/style.css
+++ b/style.css
@@ -1211,7 +1211,7 @@ body {
 }
 
 .slider-content h1 {
-    color: #fff;
+    color: #e10b1a;
     font-size: 80px;
     font-weight: 700;
     line-height: 1;
@@ -1222,7 +1222,7 @@ body {
 
 .slider-content h2 {
     color: #333;
-    font-size: 100px;
+    font-size: 55px;
     font-weight: 700;
     line-height: 1;
     margin-bottom: 25px;
@@ -7638,12 +7638,12 @@ p.lost-password a:hover {
     top: 50%;
     transform: translateY(-50%);
     right: 0;
-    /* background-color: #007bff; */
+    background-color: transparent;
     color: #000;
     border: unset;
     padding: 5px 10px;
     cursor: pointer;
-    z-index: 999;
+    z-index: 1;
 }
 
 .user-name{
@@ -7662,6 +7662,35 @@ p.lost-password a:hover {
     color: #cccccc;
 }
 
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index: 999;
+}
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+.sidenav .row {
+    padding: 10px;
+    cursor: pointer;
+}
+
+#main {
+    transition: margin-right .5s;
+}
+
 @media only screen and (max-width: 992px) {
     .product-addto-links a {
         height: 40px;
@@ -7669,3 +7698,119 @@ p.lost-password a:hover {
     }
 }
 /*------ end Compare Page Wrapper -----*/
+
+
+/*message Section*/
+.app-wrapper {
+    max-width: 400px;
+    padding: 24px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.app-header {
+    border-radius: 10px 10px 0 0;
+    background: linear-gradient(#f07c29, #f07c29);
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+}
+.app-header h2 {
+    font-size: 1.222rem;
+    font-weight: 800;
+}
+.app-header span.friend-status {
+    font-size: 0.666rem;
+}
+
+.app-message-body {
+    background-color: rgba(233, 233, 233, 0.6);
+    padding: 24px 16px 0;
+    font-size: 0.8rem;
+    overflow-y: auto;
+    max-height: 50vh;
+}
+.app-message-body .message-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+.app-message-body .message-wrapper:nth-child(2n+1) {
+    align-items: flex-start;
+}
+.app-message-body .message-wrapper:nth-child(2n+1) .message-meta {
+    justify-content: flex-start;
+}
+.app-message-body .message-wrapper:nth-child(2n) {
+    align-items: flex-end;
+}
+.app-message-body .message-wrapper:nth-child(2n) .message-meta {
+    flex-direction: row-reverse;
+}
+
+.message {
+    max-width: 66.6%;
+    background-color: #fff;
+    padding: 8px;
+    border-radius: 5px;
+    box-shadow: 4px 4px rgba(200, 200, 200, 0.25);
+    font-size: 0.9rem;
+    display: flex;
+    flex: 1 auto;
+}
+
+.message-meta {
+    display: flex;
+    flex: 1 auto;
+    margin: 10px 5px 15px;
+}
+.message-meta .sender-avatar {
+    width: 24px;
+    height: 24px;
+    border-radius: 9999px;
+    background: linear-gradient(180deg, #fb551c, #f7b633);
+    color: #fff;
+    line-height: 24px;
+    text-align: center;
+    font-size: 0.666rem;
+    font-weight: 600;
+}
+.message-meta .timestamp {
+    color: #999;
+    font-size: 0.666rem;
+    line-height: 24px;
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.app-input-area {
+    background-color: #fff;
+    border-radius: 0 0 10px 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.app-input-area input[type=text] {
+    flex: 1 80%;
+    border: none;
+    padding: 0.33rem;
+    margin: auto 10px;
+    font: 0.9rem var(--font-face);
+    outline: none;
+}
+.app-input-area button[type=submit] {
+    flex: 1 5%;
+    border: none;
+    margin: 0 auto;
+    /*background: linear-gradient(45deg, #fb551c, #f7b633);*/
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+}
+.app-input-area button[type=submit] svg {
+    fill: #f59300;
+}
+.app-input-area button[type=submit]:hover svg {
+    fill: #f7b633;
+}
